--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,22 @@
 OPENAI_API_KEY=your_openai_api_key_here
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
 AI_PROVIDER=openai
+
+# Database
+DATABASE_URL=postgresql+asyncpg://postgres:password@localhost:5432/sanapath_db
+
+# JWT Secret
+SECRET_KEY=your-super-secret-key-change-in-production
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=60
+
+# OAuth - GitHub
+GITHUB_CLIENT_ID=your_github_client_id
+GITHUB_CLIENT_SECRET=your_github_client_secret
+
+# OAuth - Google
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+
+# Frontend URL (for OAuth redirects)
+FRONTEND_URL=http://localhost:5173
