--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,18 @@ openai==1.12.0
 anthropic==0.18.1
 python-multipart==0.0.6
 httpx==0.26.0
+
+# Database
+sqlalchemy==2.0.25
+asyncpg==0.29.0
+alembic==1.13.1
+psycopg2-binary==2.9.9
+
+# Authentication
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+authlib==1.3.0
+itsdangerous==2.1.2
+
+# Email validation
+email-validator==2.1.0
