Add production deployment, AI integration, LinkedIn auth, Dashboard and Project pages

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,11 +7,9 @@ anthropic==0.18.1
 python-multipart==0.0.6
 httpx==0.26.0
 
-# Database
+# Database (SQLite - zero config!)
 sqlalchemy==2.0.25
-asyncpg==0.29.0
-alembic==1.13.1
-psycopg2-binary==2.9.9
+aiosqlite==0.19.0
 
 # Authentication
 python-jose[cryptography]==3.3.0
