--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,22 +1,51 @@
-OPENAI_API_KEY=your_openai_api_key_here
-ANTHROPIC_API_KEY=your_anthropic_api_key_here
+# SanaPath AI Backend Environment Variables
+# Copy this file to .env and fill in your values
+
+# ============ AI Configuration ============
+# Choose your AI provider: "openai" or "anthropic"
 AI_PROVIDER=openai
 
-# Database
-DATABASE_URL=postgresql+asyncpg://postgres:password@localhost:5432/sanapath_db
+# OpenAI API Key (get from https://platform.openai.com/api-keys)
+OPENAI_API_KEY=your-openai-api-key-here
 
-# JWT Secret
+# Anthropic API Key (get from https://console.anthropic.com/)
+ANTHROPIC_API_KEY=your-anthropic-api-key-here
+
+# Set to "false" to use real AI, "true" for demo mode
+AI_DEMO_MODE=true
+
+# ============ Database ============
+# SQLite (default for development)
+DATABASE_URL=sqlite+aiosqlite:///./sanapath.db
+
+# PostgreSQL (for production - Railway provides this)
+# DATABASE_URL=postgresql+asyncpg://user:password@host:port/database
+
+# ============ Security ============
+# Generate a strong secret key for JWT tokens
 SECRET_KEY=your-super-secret-key-change-in-production
+
+# JWT Settings
 ALGORITHM=HS256
-ACCESS_TOKEN_EXPIRE_MINUTES=60
+ACCESS_TOKEN_EXPIRE_MINUTES=1440
 
-# OAuth - GitHub
-GITHUB_CLIENT_ID=your_github_client_id
-GITHUB_CLIENT_SECRET=your_github_client_secret
+# ============ OAuth Credentials ============
+# GitHub OAuth (https://github.com/settings/developers)
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
 
-# OAuth - Google
-GOOGLE_CLIENT_ID=your_google_client_id
-GOOGLE_CLIENT_SECRET=your_google_client_secret
+# Google OAuth (https://console.cloud.google.com/apis/credentials)
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 
-# Frontend URL (for OAuth redirects)
+# LinkedIn OAuth (https://www.linkedin.com/developers/apps)
+LINKEDIN_CLIENT_ID=
+LINKEDIN_CLIENT_SECRET=
+
+# ============ URLs ============
 FRONTEND_URL=http://localhost:5173
+BACKEND_URL=http://localhost:8000
+
+# ============ Mode ============
+DEMO_MODE=true
+ENVIRONMENT=development
