--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.0",
+    "axios": "^1.6.7",
+    "clsx": "^2.1.0",
+    "firebase": "^12.8.0",
     "framer-motion": "^11.0.3",
     "lucide-react": "^0.323.0",
-    "axios": "^1.6.7",
-    "clsx": "^2.1.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
