--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ pydantic==2.5.3
 python-dotenv==1.0.0
 openai==1.12.0
 anthropic==0.18.1
+google-generativeai==0.4.1
 python-multipart==0.0.6
 httpx==0.26.0
 
