Add deployment config and new features: achievements, notifications, AI assistant, settings page

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,16 +2,19 @@
 # Copy this file to .env and fill in your values
 
 # ============ AI Configuration ============
-# Choose your AI provider: "openai" or "anthropic"
-AI_PROVIDER=openai
+# Choose your AI provider: "openai", "anthropic", or "gemini"
+AI_PROVIDER=gemini
 
 # OpenAI API Key (get from https://platform.openai.com/api-keys)
-OPENAI_API_KEY=your-openai-api-key-here
+OPENAI_API_KEY=
 
 # Anthropic API Key (get from https://console.anthropic.com/)
-ANTHROPIC_API_KEY=your-anthropic-api-key-here
+ANTHROPIC_API_KEY=
 
-# Set to "false" to use real AI, "true" for demo mode
+# Google Gemini API Key (get from https://aistudio.google.com/app/apikey)
+GEMINI_API_KEY=
+
+# Set to "true" for demo mode (no AI API needed), "false" to use real AI
 AI_DEMO_MODE=true
 
 # ============ Database ============
@@ -23,7 +26,8 @@ DATABASE_URL=sqlite+aiosqlite:///./sanapath.db
 
 # ============ Security ============
 # Generate a strong secret key for JWT tokens
-SECRET_KEY=your-super-secret-key-change-in-production
+# In production, use: python -c "import secrets; print(secrets.token_urlsafe(32))"
+SECRET_KEY=
 
 # JWT Settings
 ALGORITHM=HS256
@@ -45,6 +49,9 @@ LINKEDIN_CLIENT_SECRET=
 # ============ URLs ============
 FRONTEND_URL=http://localhost:5173
 BACKEND_URL=http://localhost:8000
+
+# Additional CORS origins (comma-separated)
+CORS_ORIGINS=
 
 # ============ Mode ============
 DEMO_MODE=true
