--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,16 +1,25 @@
 # SanaPath AI Frontend Environment Variables
 # Copy this file to .env and fill in your values
 
+# ============ Backend API ============
 # Backend API URL (change to production URL when deploying)
 VITE_API_URL=http://localhost:8000
 
-# Firebase Configuration
-VITE_FIREBASE_API_KEY=AIzaSyCmoC9j7-N06C1ECL7MqZnz7C0GmNl9brI
-VITE_FIREBASE_AUTH_DOMAIN=sanapath-ai.firebaseapp.com
-VITE_FIREBASE_PROJECT_ID=sanapath-ai
-VITE_FIREBASE_STORAGE_BUCKET=sanapath-ai.firebasestorage.app
-VITE_FIREBASE_MESSAGING_SENDER_ID=1085751442196
-VITE_FIREBASE_APP_ID=1:1085751442196:web:121bfdb19895d05c3fa001
+# ============ Firebase Configuration ============
+# Get these values from Firebase Console: https://console.firebase.google.com/
+# Project Settings > General > Your apps > Config
 
-# OAuth (optional - for LinkedIn)
+# Required Firebase keys (must be set for authentication to work)
+VITE_FIREBASE_API_KEY=your-firebase-api-key
+VITE_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=your-project-id
+VITE_FIREBASE_APP_ID=your-firebase-app-id
+
+# Optional Firebase keys
+VITE_FIREBASE_STORAGE_BUCKET=your-project.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=your-sender-id
+VITE_FIREBASE_MEASUREMENT_ID=G-XXXXXXXXXX
+
+# ============ OAuth (optional) ============
+# LinkedIn OAuth for social login
 VITE_LINKEDIN_CLIENT_ID=
