--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,22 +1,22 @@
-fastapi==0.109.0
-uvicorn==0.27.0
-pydantic==2.5.3
-python-dotenv==1.0.0
-openai==1.12.0
-anthropic==0.18.1
-google-generativeai==0.4.1
-python-multipart==0.0.6
-httpx==0.26.0
+fastapi>=0.100.0
+uvicorn[standard]>=0.20.0
+pydantic>=2.5.0
+python-dotenv>=1.0.0
+openai>=1.0.0
+anthropic>=0.18.0
+google-generativeai>=0.4.0
+python-multipart>=0.0.6
+httpx>=0.26.0
 
 # Database (SQLite - zero config!)
-sqlalchemy==2.0.25
-aiosqlite==0.19.0
+sqlalchemy>=2.0.0
+aiosqlite>=0.19.0
 
 # Authentication
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-authlib==1.3.0
-itsdangerous==2.1.2
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
+authlib>=1.3.0
+itsdangerous>=2.1.0
 
 # Email validation
-email-validator==2.1.0
+email-validator>=2.0.0
